--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,16 +44,20 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  http: ^1.5.0
+  modal_bottom_sheet: ^3.0.0
+  font_awesome_flutter: ^10.4.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: any
+  flutter_launcher_icons: ^0.14.4
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -69,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/images/
+  - assets/images/images_light/
   - assets/images/images_dark/
   #   - images/a_dot_ham.jpeg
 
